export type GoogleCalenderEventType = {
  id: string;
  summary: string;
  start: { dateTime: string };
  end: { dateTime: string };
}
